integrate Zidenjs v2
