# src/routers/authenRoutes.ts
@@ -1,16 +1,0 @@
-import { Router } from "express";
-import { AuthenController } from "../controllers/AuthenController.js";
-
-export class AthenRoutes {
-    public router: Router;
-    public authenController = new AuthenController();
-    constructor () {
-        this.router = Router();
-        this.routers();
-    }
-
-    routers(): void {
-        this.router.post("/login/:issuerId", this.authenController.authentication);
-        this.router.post("/verify-token/:issuerId", this.authenController.verifyToken);
-    }
-}
