# src/routers/claimsRoutes.ts
@@ -1,10 +1,8 @@
 import { Router } from "express";
-import { AuthenController } from "../controllers/AuthenController.js";
 import { ClaimsController } from "../controllers/ClaimsController.js";
 
 export class ClaimsRouters {
     public router: Router;
-    public authenController = new AuthenController();
     public claimsController = new ClaimsController();
     constructor () {
         this.router = Router();
@@ -17,13 +15,13 @@ export class ClaimsRouters {
         this.router.get("/:claimId/status", this.claimsController.getClaimStatus);
         this.router.get("/:claimId/retrieve", this.claimsController.retrieveClaim);
         this.router.post("/request/:issuerId", this.claimsController.requestNewClaim);
-        this.router.post("/issue/:issuerId", this.authenController.authorization, this.claimsController.issueListClaims);
-        this.router.post("/revoke-list/:issuerId", this.authenController.authorization, this.claimsController.revokeListClaims);
-        this.router.get("/publish-challenge/:issuerId", this.authenController.authorization, this.claimsController.getPublishChallenge);
-        this.router.get("/revoke-challenge/:issuerId", this.authenController.authorization, this.claimsController.getRevokeChallenge);
-        this.router.get("/combined-challenge/:issuerId", this.authenController.authorization, this.claimsController.getCombineChallenge);
-        this.router.post("/publish/:issuerId", this.authenController.authorizationAdmin, this.claimsController.publishClaims);
-        this.router.post("/revoke/:issuerId", this.authenController.authorizationAdmin, this.claimsController.revokeClaims);
-        this.router.post("/combined/:issuerId", this.authenController.authorizationAdmin, this.claimsController.publishAndRevokeClaims);
+        this.router.post("/issue/:issuerId", this.claimsController.issueListClaims);
+        this.router.post("/revoke-list/:issuerId", this.claimsController.revokeListClaims);
+        this.router.get("/publish-challenge/:issuerId", this.claimsController.getPublishChallenge);
+        this.router.get("/revoke-challenge/:issuerId", this.claimsController.getRevokeChallenge);
+        this.router.get("/combined-challenge/:issuerId", this.claimsController.getCombineChallenge);
+        this.router.post("/publish/:issuerId", this.claimsController.publishClaims);
+        this.router.post("/revoke/:issuerId", this.claimsController.revokeClaims);
+        this.router.post("/combined/:issuerId", this.claimsController.publishAndRevokeClaims);
     }
 }
