# src/swagger/swagger.json
@@ -31,111 +31,6 @@
     }
   ],
   "paths": {
-    "/api/v1/auth/login/{issuerId}": {
-      "post": {
-        "tags": [
-          "auth"
-        ],
-        "summary": "API login",
-        "description": "API login",
-        "parameters": [
-          {
-            "name": "issuerId",
-            "in": "path",
-            "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Login"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "default": {
-            "description": "Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/auth/verify-token/{issuerId}": {
-      "post": {
-        "tags": [
-          "auth"
-        ],
-        "summary": "API Verify Token",
-        "description": "API Verify Token",
-        "parameters": [
-          {
-            "name": "issuerId",
-            "in": "path",
-            "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "Your jwz token",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/VerifyToken"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "default": {
-            "description": "Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/v1/issuers": {
       "get": {
         "tags": [
@@ -224,207 +119,6 @@
             "name": "issuerId",
             "in": "path",
             "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/issuers/{issuerId}/operators": {
-      "post": {
-        "security": [
-          {
-            "Authorization": ["read", "write"]
-          }
-        ],
-        "tags": [
-          "issuers"
-        ],
-        "summary": "Create operator",
-        "description": "Create operator",
-        "parameters": [
-          {
-            "name": "issuerId",
-            "in": "path",
-            "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Operator"
-              }
-            }
-          }
-        },
-        "responses": {
-          "default": {
-            "description": "Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "issuers"
-        ],
-        "summary": "Get list operator",
-        "description": "Get list operator",
-        "parameters": [
-          {
-            "name": "issuerId",
-            "in": "path",
-            "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/issuers/{issuerId}/operators/{operatorId}": {
-      "get": {
-        "tags": [
-          "issuers"
-        ],
-        "summary": "Get operator infor",
-        "description": "Get operator infor",
-        "parameters": [
-          {
-            "name": "issuerId",
-            "in": "path",
-            "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "operatorId",
-            "in": "path",
-            "description": "operatorId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "security": [
-          {
-            "Authorization": ["read", "write"]
-          }
-        ],
-        "tags": [
-          "issuers"
-        ],
-        "summary": "Disable operator",
-        "description": "Disable operator",
-        "parameters": [
-          {
-            "name": "issuerId",
-            "in": "path",
-            "description": "issuerId",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "operatorId",
-            "in": "path",
-            "description": "operatorId",
             "required": true,
             "schema": {
               "type": "string"
@@ -1771,40 +1465,6 @@
           }
         }
       },
-      "Login": {
-        "type": "object",
-        "properties": {
-          "proof": {
-            "type": "object"
-          },
-          "public_signals": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "circuitId": {
-            "type": "string"
-          },
-          "schema": {
-            "type": "string"
-          },
-          "algorithm": {
-            "type": "string"
-          },
-          "payload": {
-            "type": "string"
-          }
-        }
-      },
-      "VerifyToken": {
-        "type": "object",
-        "properties": {
-          "token": {
-            "type": "string"
-          }
-        }
-      },
       "Holder": {
         "type": "object",
         "properties": {
@@ -1813,15 +1473,6 @@
             "example": "1234"
           },
           "pubkeyY": {
-            "type": "string",
-            "example": "1234"
-          }
-        }
-      },
-      "Operator": {
-        "type": "object",
-        "properties": {
-          "operatorId": {
             "type": "string",
             "example": "1234"
           }
